--- a/intro-pandas.ipynb
+++ b/intro-pandas.ipynb
@@ -25,11 +25,7 @@
     "# Introducción a `pandas`\n",
     "\n",
     "\n",
-    "<p> Julio Waissman Vilanova </p>\n",
-    "<p>\n",
-    "<img src=\"https://identidadbuho.unison.mx/wp-content/uploads/2019/06/letragrama-cmyk-72.jpg\" width=\"200\">\n",
-    "</p>\n",
-    "</center>\n"
+    "**Julio Waissman Vilanova**\n"
    ]
   },
   {
