--- a/intro-python.ipynb
+++ b/intro-python.ipynb
@@ -24,11 +24,7 @@
     "## Introducción a `python` resolviendo preguntas\n",
     "\n",
     "\n",
-    "<p> Julio Waissman Vilanova </p>\n",
-    "<p>\n",
-    "<img src=\"https://identidadbuho.unison.mx/wp-content/uploads/2019/06/letragrama-cmyk-72.jpg\" width=\"200\">\n",
-    "</p>\n",
-    "</center>\n",
+    "**Julio Waissman Vilanova**\n",
     "\n"
    ]
   },
@@ -84,12 +80,12 @@
     "### *Comprehension* de listas, conjuntos y diccionarios \n",
     "\n",
     "Escribe, en una sola linea, una expresión que genere una lista con todos los números enteros que se encuentran entre $1$ y $n$ \n",
-    "que sean divisibles por $2$, $3$ y $7$ y que el dígito menos significativo del número sea $2$."
+    "que sean divisibles por $3$ y $7$ y que el dígito menos significativo del número sea $6$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,11 +124,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escribe la función aquí\n"
+    "# Escribe la función aquí\n",
+    "\n"
    ]
   },
   {
@@ -142,6 +139,7 @@
    "outputs": [],
    "source": [
     "# Realiza pruebas aquí\n",
+    "lista = [1,'a',1, 13, 'hola', 'a', 1, 1, 'a', 1]\n",
     "d = funcion_ejemplo(lista, imprime = True)\n",
     "print(d)"
    ]
@@ -197,11 +195,24 @@
    "source": [
     "### Generadores\n",
     "\n",
-    "Escribe una función `fun1` que reciba un número $n$ y calcule el número primo inmediatamente inferior. \n",
+    "Escribe un generador que reciba una lista y genere todas las permutaciones que se puedan hacer con los elementos de la lista"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Escribe aqui fun1\n",
     "\n",
-    "Escribe una función `fun2` que reciba como argumento un numero y una función, y devuelva una lista con la evaluación de la función desde $1$ hasta $n$. \n",
+    "def permutaciones(lista):\n",
+    "    \"\"\"\n",
+    "    Permutaciones de los elementos de una lista.\n",
     "\n",
-    "Prueba `fun2` con `fun1` y con `math.sqrt`. "
+    "    Devuelve un generador con todas las permutaciones posibles de los elementos de la lista de entrada\n",
+    "    \"\"\"\n",
+    "    #TODO: Implementar la función"
    ]
   },
   {
@@ -210,7 +221,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escribe aqui fun1\n"
+    "# Realiza pruebas de fun2 aquí\n",
+    "for p in permutaciones(['a', 'b', 'c', 'd']):\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora escribe una funcipn que reciba 4 digitos del 0 al 9, y devuelva una lista con todas las horas váidas que se puedan hacer con estos dígitos en forma de lista de strings con la forma `\"HH:MM\"`."
    ]
   },
   {
@@ -219,7 +239,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Realiza pruebas de fun1 aqui\n"
+    "def horas_validas(lista):\n",
+    "    \"\"\"\n",
+    "    Docstring a comentar correctamente\n",
+    "    \"\"\"\n",
+    "    #TODO: Implementar la función"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Validando:"
    ]
   },
   {
@@ -228,16 +259,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Escribe fun2 aquí\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Realiza pruebas de fun2 aquí\n"
+    "print(horas_validas([1,2,3,4]))"
    ]
   },
   {
@@ -395,7 +417,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4
  },
