--- a/intro-pandas.ipynb
+++ b/intro-pandas.ipynb
@@ -492,7 +492,7 @@
     "\n",
     "![](https://pandas.pydata.org/docs/_images/03_subset_columns_rows.svg)\n",
     "\n",
-    "Este paso es un poco extraño, ya que no se pueden seleccionar renglones y columnas directamente, sino que hay que usar los mñetodos `.loc`y `.iloc`. Vamos a ejemplificarlos.\n",
+    "Este paso es un poco extraño, ya que no se pueden seleccionar renglones y columnas directamente, sino que hay que usar los métodos `.loc`y `.iloc`. Vamos a ejemplificarlos.\n",
     "\n",
     "Supongamos que queremos los nombres de todos los mayores de 35 años, como serie y como dataframe. La manera de seleccionar y filtrar es la siguiente:"
    ]
